fix spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 .wp-site-blocks {
-	margin: 0;
+	padding: 0;
 }
